<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email :</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="show">Show</string>
    <string name="nvigate">Navigate</string>
    <string name="Shoe_Name">shoe name :</string>
    <string name="company">Company :</string>
    <string name="size">Size :</string>
    <string name="description">Description :</string>
    <string name="name">Shoe Name</string>
    <string name="desc">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
</resources>
