<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--   easy to use ConstraintLayout in design -->
    <!--   support mobile size -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:elevation="5dp"
    app:cardCornerRadius="5dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_shoename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:text="@string/Shoe_Name"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shoename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toEndOf="@+id/tv_shoename"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/design_default_color_secondary"
            android:textSize="20sp"
            android:text="@={data.name}"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoename"
            android:textSize="20sp"
            android:text="@string/company"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toEndOf="@+id/tv_shoename"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoename"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_secondary"
            android:text="@={data.company}"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            android:textSize="20sp"
            android:text="@string/size"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toEndOf="@+id/tv_shoename"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_secondary"
            android:text="@{String.valueOf(data.size)}"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size"
            android:textSize="20sp"
            android:text="@string/description"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintStart_toEndOf="@+id/tv_shoename"
            app:layout_constraintTop_toBottomOf="@+id/tv_size"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_secondary"
            android:text="@={data.description}"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_marginTop="3dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>